# SetMembershipC

./: CMakeLists.txt  SM.cpp  Test1.cpp  a.out
DataTest/: var.cpp
SEND/: Calcmaxmin.m  CreateData.m  Run_IROS.m  Run_IROS_NLARX.m  SetmembershipClosestneighbour.m  SetmembershipClosestneighbour2.m  SetmembershipGrid.m  Setmembershiplocal.m
lib/SM/: CMakeLists.txt  SM.cpp  SM.h
main/: Test1.cpp
main/DataTest/: SetMembershipData.csv
