project(SMlib)

add_definitions(-DHICO_LE)

# source files
aux_source_directory(. SMlib_SRCS)
#INCLUDE_DIRECTORIES(.)

FILE(GLOB_RECURSE SMlib_INCLUDE_LIST *.h *.hpp)
set(SUBDIR_INCLUDE_DIRECTORIES ${SUBDIR_INCLUDE_DIRECTORIES} ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)
set(SUBDIR_LINK_NAMES ${SUBDIR_LINK_NAMES} ${PROJECT_NAME} PARENT_SCOPE)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SMlib_SRCS} ${SMlib_INCLUDE_LIST})
